--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 /Presentacion/obj
 /AccesoDatos/bin
 /AccesoDatos/obj
+/Entidad/obj
+/Entidad/bin
 /Negocio/obj
 /Negocio/bin
 /WindowsFormsApplication1
